--- a/src/index.html
+++ b/src/index.html
@@ -9,27 +9,32 @@
 
         <link rel="stylesheet" href="/css/styles.css">
         <script src="/js/vendor/modernizr-2.7.1.min.js"></script>
+        <script type="text/javascript" src="//use.typekit.net/ari4wcq.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="layout">
-            <figure class="intro">
-                <img src="/img/headshot-dan.jpg" alt="Photo of Dan Sweeney" class="intro__headshot"/>
-                <figcaption class="intro__description">
-                    Hi there! <strong>My name is Dan Sweeney</strong>, and I'm a web designer proudly based out of the Creative Corridor in Iowa City, Iowa.
-                </figcaption>
-            </figure>
-
-            <ul class="social">
-                <li class="social__link"><a href="http://twitter.com/floatingboxes" class="social__twitter">Twitter</a></li>
-                <li class="social__link"><a href="http://codepen.io/floatingboxes" class="social__codepen">Codepen</a></li>
-                <li class="social__link"><a href="https://github.com/floatingboxes" class="social__github">Github</a></li>
-                <li class="social__link"><a href="http://instagram.com/floatingboxes" class="social__instagram">Instagram</a></li>
-                <li class="social__link"><a href="http://instagram.com/floatingboxes" class="social__contact">Contact</a></li>
-            </ul>
+        <div class="lo-home">
+            <div class="lo-home__container">
+              <div class="intro">
+                  <div class="intro__headshot">
+                    <img src="/img/headshot-dan.jpg" alt="Photo of Dan Sweeney"/>
+                  </div>
+                  <div class="intro__description">
+                      Hi there! <strong>My name is Dan Sweeney</strong>, and I'm a web designer proudly based out of the Creative Corridor in Iowa City, Iowa.
+                  </div>
+              </div>
+              <ul class="social">
+                  <li class="social__link"><a href="http://twitter.com/floatingboxes" class="social__twitter">Twitter</a></li>
+                  <li class="social__link"><a href="http://codepen.io/floatingboxes" class="social__codepen">Codepen</a></li>
+                  <li class="social__link"><a href="https://github.com/floatingboxes" class="social__github">Github</a></li>
+                  <li class="social__link"><a href="http://instagram.com/floatingboxes" class="social__instagram">Instagram</a></li>
+                  <li class="social__link"><a href="mailto:dan@floatingboxes.com" class="social__contact">Contact</a></li>
+              </ul>
+            </div>
         </div>
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
