--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,11 @@ layout: default
       </div>
     </div>
     <ul class="social">
-      <li class="social__link"><a href="http://codepen.io/floatingboxes" class="social__codepen">{% include svg/icon-codepen.svg %}</a></li>
-      <li class="social__link"><a href="https://github.com/floatingboxes" class="social__github">{% include svg/icon-github.svg %}</a></li>
-      <li class="social__link"><a href="http://twitter.com/floatingboxes" class="social__twitter">{% include svg/icon-twitter.svg %}</a></li>
-      <li class="social__link"><a href="http://instagram.com/floatingboxes" class="social__instagram">{% include svg/icon-instagram.svg %}</a></li>
-      <li class="social__link"><a href="mailto:dan@floatingboxes.com" class="social__contact">{% include svg/icon-contact.svg %}</a></li>
+      <li class="social__link"><a href="http://codepen.io/floatingboxes" class="social__codepen" data-tooltip="Codepen">{% include svg/icon-codepen.svg %}</a></li>
+      <li class="social__link"><a href="https://github.com/floatingboxes" class="social__github" data-tooltip="Github">{% include svg/icon-github.svg %}</a></li>
+      <li class="social__link"><a href="http://twitter.com/floatingboxes" class="social__twitter" data-tooltip="Twitter">{% include svg/icon-twitter.svg %}</a></li>
+      <li class="social__link"><a href="http://instagram.com/floatingboxes" class="social__instagram" data-tooltip="Instagram">{% include svg/icon-instagram.svg %}</a></li>
+      <li class="social__link"><a href="mailto:dan@floatingboxes.com" class="social__contact" data-tooltip="Contact Me">{% include svg/icon-contact.svg %}</a></li>
     </ul>
   </div>
 </div>
