added initial form

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 ---
-layout: default
+layout: home
+title: Dan Sweeney | Web Designer and Co-Founder of Pear Deck
 ---
 
 <div class="lo-home">
@@ -17,7 +18,7 @@ layout: default
       <li class="social__link"><a href="https://github.com/floatingboxes" class="social__github" data-tooltip="Github">{% include svg/icon-github.svg %}</a></li>
       <li class="social__link"><a href="http://twitter.com/floatingboxes" class="social__twitter" data-tooltip="Twitter">{% include svg/icon-twitter.svg %}</a></li>
       <li class="social__link"><a href="http://instagram.com/floatingboxes" class="social__instagram" data-tooltip="Instagram">{% include svg/icon-instagram.svg %}</a></li>
-      <li class="social__link"><a href="mailto:dan@floatingboxes.com" class="social__contact" data-tooltip="Contact Me">{% include svg/icon-contact.svg %}</a></li>
+      <li class="social__link"><a href="/contact.html" class="social__contact" data-tooltip="Contact Me">{% include svg/icon-contact.svg %}</a></li>
     </ul>
   </div>
 </div>
