added pear deck to home page; link styling

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@ title: Dan Sweeney | Web Designer and Co-Founder of Pear Deck
         <img src="/img/headshot-dan.jpg" alt="Photo of Dan Sweeney"/>
       </div>
       <div class="intro__description">
-        Hi there! <strong>My name is Dan Sweeney</strong>, and I'm a web designer proudly based out of the Creative Corridor in Iowa City, Iowa.
+        Hi there! <strong>My name is Dan Sweeney</strong>. I'm Co-Founder and VP of Design at <a href="http://peardeck.com">Pear Deck</a>, and proudly based in the <a href="http://creativecorridor.co/">Creative Corridor</a> in Iowa City, Iowa.
       </div>
     </div>
     <ul class="social">
