added cute "thank you" after successful contact form submission

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@ title: Dan Sweeney | Web Designer and Co-Founder of Pear Deck
 <div class="lo-home">
   <div class="lo-home__container">
     <div class="intro">
-      <div class="intro__headshot">
+      <div class="intro__headshot js-thanks">
         <img src="/img/headshot-dan.jpg" alt="Photo of Dan Sweeney"/>
       </div>
       <div class="intro__description">
