--- a/src/samples/index.html
+++ b/src/samples/index.html
@@ -6,7 +6,7 @@ title: Work Samples
 <div class="lo-block">
   <div class="lo-block__content--narrow">
     <h1>Work Samples</h1>
-    <p>I heard through the grapevine you wanted to see some things I've been working on. Good news, I put this page together for you. While you're here, don't forget to check out <a href="https://github.com/floatingboxes/fb">the source code</a> to see how I like to make websites.</p>
+    <p>I heard through the grapevine that you wanted to see some things I've been working on. Good news, I put this page together for you! While you're here, don't forget to check out <a href="https://github.com/floatingboxes/fb">the source code</a> to get a feel for how I like to make websites.</p>
     <p>Thanks for stopping by!</p>
     <p>- Dan</p>
   </div>
@@ -15,30 +15,30 @@ title: Work Samples
 <!-- Pear Deck Identity -->
 <div class="lo-block">
   <div class="sample--basic">
-    <div class="sample__image"><img src="http://placehold.it/1600x1200" alt=""></div>
+    <div class="sample__image"><img src="/img/samples/pear-deck-identity.png" alt="Pear Deck Logo and Color Pallet"></div>
     <div class="sample__info">
       <h2>Pear Deck Identity</h2>
-      <p>The number one question I get about Pear Deck is &#8220;Why the Pear?&#8221; The answer is that we wanted to create a unique brand in the K-12 education space filled with people who use words like <em>assessment</em>, <em>differentiation</em>, <em>twenty-first century skills</em>, and <em>PowerPoint</em>.</p>
-      <p>Pears are sweet, fun, and good for you. The brand strives to represent the mentality we hope to promote in K-12 classrooms.</p>
+      <p>The number one question people have about Pear Deck is &#8220;Why the Pear?&#8221; The answer: We wanted to create a unique brand in a K-12 education space filled with people who use words like <em>assessment</em>, <em>differentiation</em>, <em>twenty-first century skills</em>, and <em>PowerPoint</em>.</p>
+      <p>Pears are sweet, fun, and good for you. The brand strives to represent the mentality we hope to foster in K-12 classrooms.</p>
     </div>
   </div>
 </div>
 <div class="lo-block">
   <div class="sample--wide">
-    <div class="sample__image"><img src="http://placehold.it/2800x600" alt=""></div>
-    <div class="sample__info">See what I mean? Fun.</div>
+    <div class="sample__image"><img src="/img/samples/fun-pears.png" alt="Fun Pears"></div>
+    <div class="sample__info">See what I mean? It's <em>fun</em>.</div>
   </div>
 </div>
 <div class="lo-block">
   <div class="sample--fourup">
-    <div class="sample__image"><img src="http://placehold.it/800x600&text=home+page" alt=""></div>
+    <div class="sample__image"><img src="/img/samples/website-home-page.png" alt="Pear Deck Home Page"></div>
     <div class="sample__info">
       <h2>Pear Deck Website</h2>
-      <p>This latest iteration of the Pear Deck website is designed to capitalize on what our users want to do (try the product) while driving them quickly to Pear Deck's "Ah-ha!" moment (seeing students join and respond in a presentation).</p>
-      <p>The website is a constantly evolving project, as we react not only to incoming data but advances in our product and sales process. Feel free to <a href="http://www.peardeck.com">explore the entire site here</a>.</p>
+      <p>The latest iteration of the Pear Deck website is designed to capitalize on what our users want to do (try the product) while driving them quickly to Pear Deck's  &#8220;ah-ha!&#8221; moment (experiencing students joining and participating in a presentation).</p>
+      <p>The website is a constantly evolving project, as we react not only to incoming data but advances in our product and sales processes. Feel free to <a href="http://www.peardeck.com">explore the entire site here</a>.</p>
     </div>
-    <div class="sample__image"><img src="http://placehold.it/800x600&text=features+page" alt=""></div>
-    <div class="sample__image"><img src="http://placehold.it/800x600&text=pricing+page" alt=""></div>
+    <div class="sample__image"><img src="/img/samples/website-feature-header.png" alt="Pear Deck Feature Page"></div>
+    <div class="sample__image"><img src="/img/samples/website-feature-footer.png" alt="Pear Deck Feature Page Footer"></div>
   </div>
 </div>
 <div class="lo-block">
@@ -50,7 +50,7 @@ title: Work Samples
     </div>
     <div class="sample__info">
       <h2>Pear Deck Videos</h2>
-      <p>We use video at Pear Deck to communicate a range of topics, from basic introductions to complex use cases of the app. For our most important videos I spend time coordinating voice talent, creating motion graphics, and editing the final result.</p>
+      <p>We use video at Pear Deck to communicate a range of topics, from basic introductions to complex use cases. For our most important videos I spend time coordinating voice talent, creating motion graphics, and editing the final result.</p>
       <h3>Sample Videos</h3>
       <ul>
         <li><a href="https://www.youtube.com/watch?v=evoJy4WcReM">How Does Pear Deck Work? [0:49]</a></li>
@@ -64,26 +64,26 @@ title: Work Samples
   <div class="sample--fourup">
     <div class="sample__info">
       <h2>Pear Deck Web App</h2>
-      <p>Design and front-end development on the Pear Deck Web App is how I like to spend most of my time. From initial sketches, to interactive prototype building, to user testing, to working with the product team on maintainable markup and styling, I'm involved in every step.</p>
-      <p>Pear Deck is free for 30 days, <a href="#">create an account</a> and test drive it yourself.</p>
+      <p>I spend a majority of my time designing and doing front-end development on the Pear Deck Web App. From initial sketches, to interactive prototype building, to user testing, to working with the product team on maintainable markup and style, I'm involved in every step.</p>
+      <p>Pear Deck is free for 30 days, <a href="https://app.peardeck.com/home/">create an account</a> and test drive it yourself.</p>
       <h3>Links</h3>
       <ul>
-        <li><a href="#">Sample InVision Interactive Prototype</a></li>
-        <li><a href="#">Sample User Test Video</a></li>
-        <li><a href="#">Create a Free Pear Deck Account</a></li>
+        <li><a href="http://invis.io/B32U2Y3YM">Sample InVision Interactive Prototype</a></li>
+        <li><a href="http://trymyui.com/pva/6MVM6NyZzn">Sample User Test Video</a></li>
+        <li><a href="https://app.peardeck.com/home/">Create a Free Pear Deck Account</a></li>
       </ul>
     </div>
-    <div class="sample__image"><img src="http://placehold.it/800x600&text=sketches" alt=""></div>
-    <div class="sample__image"><img src="http://placehold.it/800x600&text=invision+wireframe" alt=""></div>
-    <div class="sample__image"><img src="http://placehold.it/800x600&text=session+dashboard" alt=""></div>
+    <div class="sample__image"><img src="/img/samples/app-sketch.jpg" alt="Sketch"></div>
+    <div class="sample__image"><img src="/img/samples/app-invision.png" alt="Invision Prototype"></div>
+    <div class="sample__image"><img src="/img/samples/app-final.gif" alt="Final Implementation"></div>
   </div>
 </div>
 <div class="lo-block">
   <div class="sample--basic">
-    <div class="sample__image"><img src="http://placehold.it/1600x1200&text=" alt=""></div>
+    <div class="sample__image"><img src="/img/samples/investor-packet.jpg" alt="Investor Packet"></div>
     <div class="sample__info">
       <h2>Pear Deck Investor Packet</h2>
-      <p>For a startup, communicating effectively with investors can be as important as communicating with customers. I helped develop and design this 20 page booklet to deliver our pitch in a beautiful manner. The information within the packet is primarily confidential, but I'd be happy to share a redacted document in person.</p>
+      <p>For a startup, communicating effectively with investors can be as important as communicating with customers. I helped develop and design this 22 page booklet to deliver our pitch when we aren't there in person. The information within the packet is primarily confidential, but I'd be happy to share a redacted document in person.</p>
     </div>
   </div>
 </div>
@@ -96,21 +96,21 @@ title: Work Samples
     </div>
     <div class="sample__info">
       <h2>Pear Deck Investor Pitch</h2>
-      <p>I co-authored and developed visuals for our investor pitch, which won first prize and a $250,000 investment from AOL Founder Steve Case at SXSW 2015. Track to 2:15:30 on the Google Demo Day 2015 video to see the entire 5 minute presentation.</p>
+      <p>I co-authored and developed visuals for our investor pitch, which won first prize at Rise of the Rest at SXSW 2015. This prize came with a $250,000 investment from AOL Founder Steve Case. Track to 2:15:30 on the Google Demo Day 2015 video to see the entire 5 minute presentation.</p>
       <h3>Links</h3>
       <ul>
         <li><a href="https://youtu.be/QxptCWOqIRM?t=2h15m37s">Watch the Pitch at Google Demo Day [Starting at 2:15:30]</a></li>
-        <li><a href="#">FIX ME: Download the Keynote File [XXX MB]</a></li>
+        <li><a href="https://www.icloud.com/keynote/AwBUCAESELzszbMTzbH9cMwcVciOvp8aKQzWcqd1XPSp1ZapheLt_oIQe7kHXtkAGQaEVykfgGTsYuzNcM2WgbWXMCUCAQEEILsCZhmFyV-mjQ4oDii_agZ0Nqwrh9mvYAHLVitkcogB#Pear_Deck_-_Google_Demo_Day">Download the Keynote File [160 MB]</a></li>
       </ul>
     </div>
   </div>
 </div>
 <div class="lo-block">
   <div class="sample--basic">
-    <div class="sample__image"><img src="http://placehold.it/1600x1200&text=" alt=""></div>
+    <div class="sample__image"><img src="/img/samples/email-marketing.png" alt="Sample Email"></div>
     <div class="sample__info">
       <h2>Pear Deck Email Marketing</h2>
-      <p>Designing a building an effective automated follow-up email campaign is a necessary evil for effective web app marketing. You know what I mean by "evil" if you've ever tried coding even complex HTML emails.</p>
+      <p>Designing and building an automated email campaign is a necessary evil for effective web app marketing. You know what I mean by  &#8220;evil&#8221; if you've ever tried coding even simple HTML emails.</p>
       <p>I developed an automated build process to make the process less painful when new emails and email templates are needed.</p>
     </div>
   </div>
