tweaked sample order and text

--- a/src/samples/index.html
+++ b/src/samples/index.html
@@ -35,7 +35,7 @@ title: Work Samples
     <div class="sample__info">
       <h2>Pear Deck Website</h2>
       <p>The latest iteration of the Pear Deck website is designed to capitalize on what our users want to do (try the product) while driving them quickly to Pear Deck's  &#8220;ah-ha!&#8221; moment (experiencing students joining and participating in a presentation).</p>
-      <p>The website is a constantly evolving project, as we react not only to incoming data but advances in our product and sales processes. Feel free to <a href="http://www.peardeck.com">explore the entire site here</a>.</p>
+      <p>The website is a constantly evolving project, as we react not only to incoming data but also advances in our product and sales processes. Feel free to <a href="http://www.peardeck.com">explore the entire site here</a>.</p>
     </div>
     <div class="sample__image"><img src="/img/samples/website-feature-header.png" alt="Pear Deck Feature Page"></div>
     <div class="sample__image"><img src="/img/samples/website-feature-footer.png" alt="Pear Deck Feature Page Footer"></div>
@@ -50,7 +50,7 @@ title: Work Samples
     </div>
     <div class="sample__info">
       <h2>Pear Deck Videos</h2>
-      <p>We use video at Pear Deck to communicate a range of topics, from basic introductions to complex use cases. For our most important videos I spend time coordinating voice talent, creating motion graphics, and editing the final result.</p>
+      <p>We use video at Pear Deck to communicate a range of topics, from basic introductions to complex use cases. For the majority of our videos, I spend time coordinating voice talent, creating motion graphics, and editing the final result.</p>
       <h3>Sample Videos</h3>
       <ul>
         <li><a href="https://www.youtube.com/watch?v=evoJy4WcReM">How Does Pear Deck Work? [0:49]</a></li>
@@ -64,7 +64,7 @@ title: Work Samples
   <div class="sample--fourup">
     <div class="sample__info">
       <h2>Pear Deck Web App</h2>
-      <p>I spend a majority of my time designing and doing front-end development on the Pear Deck Web App. From initial sketches, to interactive prototype building, to user testing, to working with the product team on maintainable markup and style, I'm involved in every step.</p>
+      <p>I spend a majority of my time designing and doing front-end development on the Pear Deck Web App. From initial sketches to interactive prototype building, to user testing, to working with the product team on maintainable markup and style, I'm involved in every step.</p>
       <p>Pear Deck is free for 30 days, <a href="https://app.peardeck.com/home/">create an account</a> and test drive it yourself.</p>
       <h3>Links</h3>
       <ul>
@@ -79,16 +79,17 @@ title: Work Samples
   </div>
 </div>
 <div class="lo-block">
-  <div class="sample--basic">
-    <div class="sample__image"><img src="/img/samples/investor-packet.jpg" alt="Investor Packet"></div>
+  <div class="sample--alt">
+    <div class="sample__image"><img src="/img/samples/email-marketing.png" alt="Sample Email"></div>
     <div class="sample__info">
-      <h2>Pear Deck Investor Packet</h2>
-      <p>For a startup, communicating effectively with investors can be as important as communicating with customers. I helped develop and design this 22 page booklet to deliver our pitch when we aren't there in person. The information within the packet is primarily confidential, but I'd be happy to share a redacted document in person.</p>
+      <h2>Pear Deck Email Marketing</h2>
+      <p>Designing and building an automated email campaign is a necessary evil for effective web app marketing. You know what I mean by &#8220;evil&#8221; if you've ever tried coding even simple HTML emails.</p>
+      <p>I developed an automated build process to make the process less painful when new emails and email templates are needed.</p>
     </div>
   </div>
 </div>
 <div class="lo-block">
-<div class="sample--alt">
+  <div class="sample--basic">
     <div class="sample__video">
       <div class="sample__video-embed">
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/QxptCWOqIRM?t=2h15m37s" frameborder="0" allowfullscreen></iframe>
@@ -106,12 +107,11 @@ title: Work Samples
   </div>
 </div>
 <div class="lo-block">
-  <div class="sample--basic">
-    <div class="sample__image"><img src="/img/samples/email-marketing.png" alt="Sample Email"></div>
+  <div class="sample--alt">
+    <div class="sample__image"><img src="/img/samples/investor-packet.jpg" alt="Investor Packet"></div>
     <div class="sample__info">
-      <h2>Pear Deck Email Marketing</h2>
-      <p>Designing and building an automated email campaign is a necessary evil for effective web app marketing. You know what I mean by  &#8220;evil&#8221; if you've ever tried coding even simple HTML emails.</p>
-      <p>I developed an automated build process to make the process less painful when new emails and email templates are needed.</p>
+      <h2>Pear Deck Investor Packet</h2>
+      <p>For a startup, communicating effectively with investors can be as important as communicating with customers. I helped author and design this 22 page booklet to deliver our pitch when we aren't there in person. The information within the packet is primarily confidential, but I'd be happy to share a redacted document in person.</p>
     </div>
   </div>
 </div>
