tweaked start of video

--- a/src/samples/index.html
+++ b/src/samples/index.html
@@ -92,7 +92,7 @@ title: Work Samples
   <div class="sample--basic">
     <div class="sample__video">
       <div class="sample__video-embed">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/QxptCWOqIRM?t=2h15m37s" frameborder="0" allowfullscreen></iframe>
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/QxptCWOqIRM?start=8130" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
     <div class="sample__info">
