home page links

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@ title: Dan Sweeney | Web Designer and Co-Founder of Pear Deck
         Hi there! <strong>My name is Dan Sweeney</strong>. I'm Co-Founder and VP of Design at <a href="http://peardeck.com">Pear Deck</a>, and proudly based in the <a href="http://creativecorridor.co/">Creative Corridor</a> in Iowa City, Iowa.
       </div>
     </div>
+    <ul class="links">
+      <li><a href="/samples">Work Samples</a></li>
+      <li><a href="//resources.floatingboxes.com">Design Resources</a></li>
+    </ul>
     <ul class="social">
       <li class="social__link"><a href="http://codepen.io/floatingboxes" class="social__codepen" data-tooltip="Codepen">{% include svg/icon-codepen.svg %}</a></li>
       <li class="social__link"><a href="https://github.com/floatingboxes" class="social__github" data-tooltip="Github">{% include svg/icon-github.svg %}</a></li>
