--- a/src/resources/index.html
+++ b/src/resources/index.html
@@ -17,7 +17,7 @@ title: Web Design Resources
     <div class="resource__tags">
       <ul>
         {% for tag in post.tags %}
-          <li class="resource__tag">{{ tag }}</li>
+          <li class="resource__tag"><a>{{ tag }}</a></li>
         {% endfor %}
       </ul>
     </div>
