--- a/src/resources/index.html
+++ b/src/resources/index.html
@@ -3,29 +3,36 @@ layout: base
 title: Web Design Resources
 ---
 
-
-<section class="resources">
-{% for post in site.categories["resources"] %}
-  <article class="resource">
-    <header>
-      <h2 class="resource__header"><a href="{{ post.www-url }}" class="resource__link">{{ post.title }}</a></h2>
-      <div class="resource__timestamp"> {{ post.date | date: "%B %d, %Y" }}</div>
-    </header>
-    <div class="resource__body">
-      {{ post.content }}
-    </div>
-    <div class="resource__tags">
-      <ul>
-        {% for tag in post.tags %}
-          <li class="resource__tag"><a>{{ tag }}</a></li>
-        {% endfor %}
-      </ul>
-    </div>
-    <footer>
-      <div class="resource__permalink">
-        <a href="{{ post.url }}"><img src="/img/permalink.svg" class="icon-permalink" alt="Permalink" /></a>
+<div class="lo-resources">
+  <h1>Web Design Resources</h1>
+  <section class="filter">
+    <form action="" class="filter__form" method="post">
+      <input type="text" class="filter__input js-filter-input" placeholder="Type a word here to filter" />
+    </form>
+  </section>
+  <section class="resources">
+  {% for post in site.categories["resources"] %}
+    <article class="resource">
+      <header>
+        <h2 class="resource__header"><a href="{{ post.www-url }}" class="resource__link">{{ post.title }}</a></h2>
+        <div class="resource__timestamp"> {{ post.date | date: "%B %d, %Y" }}</div>
+      </header>
+      <div class="resource__body">
+        {{ post.content }}
       </div>
-    </footer>
-  </article>
-{% endfor %}
-</section>
+      <div class="resource__tags">
+        <ul>
+          {% for tag in post.tags %}
+            <li class="resource__tag"><a>{{ tag }}</a></li>
+          {% endfor %}
+        </ul>
+      </div>
+      <footer>
+        <div class="resource__permalink">
+          <a href="{{ post.url }}"><img src="/img/permalink.svg" class="icon-permalink" alt="Permalink" /></a>
+        </div>
+      </footer>
+    </article>
+  {% endfor %}
+  </section>
+</div>
