--- a/src/books/index.html
+++ b/src/books/index.html
@@ -6,7 +6,10 @@ title: Books
 <section class="books">
 {% for post in site.categories["books"] %}
   <article class="book">
+    <img src="/img/books/" alt="">
     {{ post.title }} - {{ post.author}}
+
+    {{ post.id }}
   </article>
 {% endfor %}
 </section>
