--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@ title: Dan Sweeney | Web Designer and Co-Founder of Pear Deck
     </div>
     <ul class="links">
       <li><a href="/samples">Work Samples</a></li>
-      <li><a href="//resources.floatingboxes.com">Design Resources</a></li>
+      <li><a href="/resources">Design Resources</a></li>
     </ul>
     <ul class="social">
       <li class="social__link"><a href="http://codepen.io/floatingboxes" class="social__codepen" data-tooltip="Codepen">{% include svg/icon-codepen.svg %}</a></li>
