added books link to home page

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@ title: Dan Sweeney | Web Designer and Co-Founder of Pear Deck
     <ul class="links">
       <li><a href="/samples">Work Samples</a></li>
       <li><a href="/resources">Design Resources</a></li>
+      <li><a href="/books">Reading List</a></li>
     </ul>
     <ul class="social">
       <li class="social__link"><a href="http://codepen.io/floatingboxes" class="social__codepen" data-tooltip="Codepen">{% include svg/icon-codepen.svg %}</a></li>
