--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@ title: Dan Sweeney | Web Designer and Co-Founder of Pear Deck
         <img src="/img/headshot-dan.jpg" alt="Photo of Dan Sweeney"/>
       </div>
       <div class="intro__description">
-        Hi there! <strong>My name is Dan Sweeney</strong>. I'm Co-Founder and VP of Design at <a href="http://peardeck.com">Pear Deck</a>, and proudly based in the <a href="http://creativecorridor.co/">Creative Corridor</a> in Iowa City, Iowa.
+        Hi there! <strong>My name is Dan Sweeney</strong>. I'm Co-Founder and VP of Product at <a href="http://peardeck.com">Pear Deck</a>, and proudly based in the <a href="http://creativecorridor.co/">Creative Corridor</a> in Iowa City, Iowa.
       </div>
     </div>
     <ul class="links">
@@ -19,9 +19,7 @@ title: Dan Sweeney | Web Designer and Co-Founder of Pear Deck
       <li><a href="/books">Reading List</a></li>
     </ul>
     <ul class="social">
-      <li class="social__link"><a href="http://codepen.io/floatingboxes" class="social__codepen" data-tooltip="Codepen">{% include svg/icon-codepen.svg %}</a></li>
       <li class="social__link"><a href="https://github.com/floatingboxes" class="social__github" data-tooltip="Github">{% include svg/icon-github.svg %}</a></li>
-      <li class="social__link"><a href="http://twitter.com/floatingboxes" class="social__twitter" data-tooltip="Twitter">{% include svg/icon-twitter.svg %}</a></li>
       <li class="social__link"><a href="http://instagram.com/floatingboxes" class="social__instagram" data-tooltip="Instagram">{% include svg/icon-instagram.svg %}</a></li>
       <li class="social__link"><a href="/contact.html" class="social__contact" data-tooltip="Contact Me">{% include svg/icon-contact.svg %}</a></li>
     </ul>
