--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img src="/img/headshot-dan.jpg" alt="Photo of Dan Sweeney"/>
       </div>
       <div class="intro__description">
-        Hi there! <strong>My name is Dan Sweeney</strong>. I'm Co-Founder and VP of Product at <a href="http://peardeck.com">Pear Deck</a>, and proudly based in the <a href="http://creativecorridor.co/">Creative Corridor</a> in Iowa City, Iowa.
+        Hi there! <strong>My name is Dan Sweeney</strong>. I'm Co-Founder and VP of Product at <a href="http://peardeck.com">Pear Deck</a>, and proudly based in Iowa City, Iowa.
       </div>
     </div>
     <ul class="links">
